# var-Next

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: 12288x8196_d1_latent.json  12288x8196_latent.json  2048_latent.json  320_180_base.json  4096_d1_latent.json  4096b200_d1_latent.json  4096b20_d1_latent.json  4096b2_d1_latent.json  4096x2048_latent.json  6048x6048_latent.json  8196x6048_latent.json  8196x8196_latent.json  gs4096b20_d1_latent.json  gs5k.json  gs6048x6048_latent.json  zara.json
deployment/: ffmpg-split.slurm  run_training.slurm
notebooks/: Untitled.ipynb  var-Next.ipynb
notebooks/.ipynb_checkpoints/: var-Next-checkpoint.ipynb
src/var_next/: annotation_dataloader.py  train_varnext.py  var_next.py  video_segment.py  vnext.py
